--- a/src/App.css
+++ b/src/App.css
@@ -2,27 +2,17 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.App-filters {
+  display: flex;
+  justify-content: space-evenly;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.App-error {
+  position: absolute;
+  z-index: 10;
+  right: 40%;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.App-top-nav {
+  position: relative;
 }
