--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 .App {
   text-align: center;
 }
-/*
-.App-filters {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-} */
+
+.App-logo:hover {
+  cursor: pointer;
+}
+
 
 .ui.negative.message.App-error {
   position: absolute;
@@ -15,6 +14,20 @@
   right: 40%;
 }
 
+
 .ui.segment.App-top-nav {
   position: relative;
+  background: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+img.App-logo {
+  width: 100%;
+  height: auto;
+}
+
+.App-logo-container {
+  width: 100px;
 }
