side menu sort of not shit

--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-radius: 0px;
+  padding: 0 1em 0 1em;
+  margin: 0;
 }
 
 img.App-logo {
