--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,19 @@
 .App {
   /* text-align: center; */
 }
+.App-bottom-nav-container {
+  width: 100%;;
+  bottom: 0;
+  position: fixed;
+  height: 70px;
+  display: flex;
+  background: black;
+  flex-direction: row-reverse;
+}
+
+i.red.options.huge.icon.App-filters-toggle-icon:hover {
+  cursor: display;
+}
 
 .App-logo:hover {
   cursor: pointer;
