fixed border bug

--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
   position: relative;
 }
 
+.App-container {
+  margin-bottom: 70px;
+}
+
 .App-bottom-nav-container {
   width: 100%;;
   bottom: 0;
