--- a/src/App.css
+++ b/src/App.css
@@ -13,14 +13,22 @@
 
 .App-bottom-nav-container {
   width: 100%;;
+  justify-content: space-between;
   bottom: 0;
   position: fixed;
   height: 70px;
   display: flex;
   background: black;
-  flex-direction: row-reverse;
 }
 
+.App-bottom-nav-track-info-container {
+  color: white;
+  width: 200px;
+}
+
+.App-bottom-nav-play-button:hover {
+  cursor: pointer;
+}
 
 .App-filters-toggle-icon-container  {
   padding-right: 10px;
