--- a/src/FiltersMenu.css
+++ b/src/FiltersMenu.css
@@ -5,7 +5,24 @@
     flex-direction: column;
     position: absolute;
     right: 0px;
-    bottom: 68px;
+    bottom: 60px;
     padding: 10px;
     background: black;
+}
+
+.App-filters-filter-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.App-filters-select-container {
+  width: 234px;
+}
+
+.ui.large.label.App-filters-filter-pre-text {
+  width: 75px;
+}
+
+#App-filters-sort a.item{
+  font-size: 10px;
 }
