--- a/src/App/App.css
+++ b/src/App/App.css
@@ -21,6 +21,14 @@
   align-items: center;
 }
 
+@media only screen and (max-width: 767px)
+.ui.container {
+    /* margin-left: 1em!important; */
+    /* margin-right: 1em!important; */
+    margin-left: 0!important;
+    margin-right: 0!important;
+  }
+
 
 .App-bottom-nav-track-info-container {
   color: white;
@@ -78,4 +86,13 @@
   flex: 1;
   display: flex;
   justify-content: center;
+}
+
+@media only screen and (max-width: 767px) {
+  .ui.container {
+    width: auto;
+    margin-left: auto!important;
+    margin-right: auto!important;
+  }
+
 }
