--- a/src/Feed/SuperFilterPanel.css
+++ b/src/Feed/SuperFilterPanel.css
@@ -1,5 +1,6 @@
 .SuperFilterPanel {
 	padding: 35px;
+	/* background: image('./yo.jpg'); */
 	background: linear-gradient(#e66465, #9198e5);
 	-webkit-box-shadow: 5px 1px 8px 2px #ccc;
 }
