--- a/src/Feed/SuperFilterPanel.css
+++ b/src/Feed/SuperFilterPanel.css
@@ -3,6 +3,7 @@
 	/* background: image('./yo.jpg'); */
 	background: linear-gradient(#e66465, #9198e5);
 	-webkit-box-shadow: 5px 1px 8px 2px #ccc;
+	min-height: 130px;
 }
 
 /* https://react-slick.neostack.com/docs/example/custom-arrows */
