now curators are clickable (first 8), and we could go form soundlcoud_user page to another

--- a/src/TrackList/TrackList.css
+++ b/src/TrackList/TrackList.css
@@ -20,7 +20,11 @@
 }
 
 .TrackList-curator-popup-container {
-	width: 3em;
+	display: block;
+}
+
+.TrackList-curator-list-items.ui.basic.label {
+	width: 100%
 }
 
 .TrackList-play-pause-icon {
