--- a/src/SoundcloudUser/soundcloud_user.css
+++ b/src/SoundcloudUser/soundcloud_user.css
@@ -12,3 +12,13 @@ a.ui.basic.label.Soundclouduser-Banner-Handle {
   justify-content: space-between;
   align-items: center;
 }
+
+@media (max-width: 700px) {
+  .Soundclouduser-Banner-Top-Half {
+    flex-direction: column;
+    align-items: center;
+  }
+  /* .Soundclouduser-banner-right-half { */
+    /* margin-top: 2rem; */
+  /* } */
+}
