--- a/src/SoundcloudUser/soundcloud_user.css
+++ b/src/SoundcloudUser/soundcloud_user.css
@@ -10,7 +10,7 @@ a.ui.basic.label.Soundclouduser-Banner-Handle {
 .Soundclouduser-Banner-Top-Half {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
 }
 
 @media (max-width: 700px) {
