--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,6 +1,7 @@
 .Home-social-links {
   display: flex;
   justify-content: space-evenly;
+  margin-bottom: 2rem;
 }
 
 .Home-BC-greeting-container {
