--- a/src/TrackList/TrackList.css
+++ b/src/TrackList/TrackList.css
@@ -10,11 +10,12 @@
 	padding-right: 1em;
 }
 
-
 .TrackList-artwork-play-pause-container {
-	width: 25% !important;
-	max-height: auto !important;
+	width: 100%;
+	max-width: 250px;
+	max-height: auto;
 	position: relative;
+
 }
 
 .TrackList-artwork-play-pause-container img {
@@ -71,14 +72,41 @@ i.video.play.outline.icon.TrackList-play-pause-icon {
 	/*display:none;*/
 }
 
-.ui.relaxed.divided.items>.item {
-	padding: 1.5em 1.5em;
+.ui.relaxed.divided.items .meta, 
+.ui.relaxed.divided.items .description, 
+.ui.relaxed.divided.items .extra {
+	margin:0;
 }
+
+.ui.relaxed.divided.items {
+	width: 100%;
+	max-width: 100%;
+}
+
+
+.ui.relaxed.divided.items>.item {
+	padding: 0 1.3rem 0 2rem;
+	display: inline-block;
+}
+
+.ui.relaxed.divided.items>.item>.content,
+.ui.relaxed.divided.items>.item>.TrackList-artwork-play-pause-container{
+  display: inline-block;
+  float:left;
+  padding: 0;
+}
+
 
 .ui.relaxed.divided.items .content{
 	/*DEBUG CLASS ONLY ERASE IF NOT NEEDED*/
-	padding: 0 !important;
+	padding: 0;
+	width: 70%;
 }
+
+.ui.items>.item>.content>.header:not(.ui) {
+    font-size: 1em;
+}
+
 
 .ui.relaxed.divided.items .content a.header,
 .ui.relaxed.divided.items .content .TrackList-artist-name,
@@ -88,3 +116,9 @@ i.video.play.outline.icon.TrackList-play-pause-icon {
 	/*display none DEBUGGING ONLY v*/
 	/*display: none;*/
 }
+
+hr.separator {
+	width:5%;
+	background-color: blue;
+}
+
