--- a/src/TopNav/top_nav.css
+++ b/src/TopNav/top_nav.css
@@ -1,7 +1,5 @@
 .ui.segment.App-top-nav {
-/*  position: relative;*/
-  position: fixed;
-  /*top: 0;*/
+  position: relative;
   background: black;
   display: flex;
   justify-content: space-between;
@@ -9,9 +7,6 @@
   border-radius: 0px;
   padding: 0 1em 0 1em;
   margin: 0;
-  z-index: 100;
-  width: 100%;
-  height: 100px;
 }
 
 img.App-logo {
