stylized with new changes from master

--- a/src/FeedHome/FeedHome.css
+++ b/src/FeedHome/FeedHome.css
@@ -8,23 +8,25 @@
 .ui.secondary.pointing.menu>.item {
 	background: transparent;
 	color:#fff;
-	width:21%;
+	width:25%;
 	text-align: center;
 	margin:0;
 	font-weight: 700;
 	font-size: 1.1rem;
-	border: 2px white solid;
+	border-left: 1px #5a5a5a solid;
 	padding:10px 10px;
-	margin:0 2%;
 	display: block;
-	transition: 0.25s color, 0.25s background, 0.25s border;
+	transition: 0.25s color;
+}
+
+.ui.secondary.pointing.menu>.item.active {
+
 }
 
 .ui.secondary.pointing.menu>a.item:hover,
 .ui.secondary.pointing.menu>.item:active,
 .ui.secondary.pointing.menu>.item.active,
 .ui.secondary.pointing.menu>.item.active:hover{
-	background: rgb(95, 158, 160);
-	border: rgba(256,256,256,0.75) 2px solid;
-	color: rgba(256,256,256,0.75);
+	color: rgb(95, 158, 160);
+	border-left: 1px #5a5a5a solid;
 }
