--- a/src/App/App.css
+++ b/src/App/App.css
@@ -143,7 +143,7 @@
   }
 
   button.ui.button[role*=button] {
-    margin: 10px auto 65px auto;
+    margin: 10px auto;
     background: transparent;
     font-size: 1.2rem;
     color: white;
