--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,18 +1,22 @@
 .Home-social-links {
-  display: flex;
-  justify-content: space-evenly;
-  margin-bottom: 2rem;
+	display: flex;
+	justify-content: space-evenly;
+	margin-bottom: 2rem;
 }
 
 .Home-BC-greeting-container {
-  margin-top: 3em;
+	margin-top: 3em;
 }
 
 .Home-BC-description {
-    font-size: 1.5rem;
-    margin-bottom: 1rem;
+	font-size: 1.5rem;
+	margin-bottom: 1rem;
 }
 
 .Home-widget {
-  margin-top: 2rem;
+	margin-top: 2rem;
+}
+
+.Home-widget-container {
+	margin-bottom: 2rem;
 }
