--- a/src/BottomNav/BottomNav.css
+++ b/src/BottomNav/BottomNav.css
@@ -1,14 +1,18 @@
-.App-bottom-nav-container {
+.App-bottom-nav {
 	width: 100%;
 	justify-content: space-between;
 	bottom: 0;
-	position: fixed;
-	height: 70px;
+	position: relative;
+	height: 80px;
 	display: flex;
 	background: black;
 	align-items: center;
 }
-
+.App-bottom-nav-container {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+}
 .App-bottom-nav-track-info-container {
 	color: white;
 	/* width: 200px; */
@@ -64,6 +68,7 @@
 
 .App-bottom-nav-box {
 	flex: 1;
+	align-items: inherit;
 	display: flex;
 	justify-content: center;
 }
