--- a/src/SeekBar/SeekBar.css
+++ b/src/SeekBar/SeekBar.css
@@ -33,3 +33,9 @@ progress[value]::-webkit-progress-bar {
 progress::-webkit-progress-value {
   background-color: #de3e96;
 }
+
+@media only screen and (max-width: 767px) {
+  progress[value] {
+    height: 1.2rem;
+  }
+}
