--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,7 @@
+.App, body {
+  background: whitesmoke;
+}
+
 @media only screen and (max-width: 767px)
 .ui.container {
     /* margin-left: 1em!important; */
