--- a/src/BottomNav/BottomNav.css
+++ b/src/BottomNav/BottomNav.css
@@ -5,7 +5,7 @@
 	position: relative;
 	height: 80px;
 	display: flex;
-	background: black;
+	background: rgba(0,0,0,0.25);;
 	align-items: center;
 }
 
