--- a/src/Vis/Vis.css
+++ b/src/Vis/Vis.css
@@ -8,3 +8,190 @@
     right: -7px;
     top: 11px;
 }
+
+#canvas-bg {
+    width: 100vw;
+    height: 100vh;
+    z-index: 0;
+    position: fixed;
+}
+
+#faux-canvas {
+    z-index: 3;
+    position: fixed;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+article {
+    -webkit-box-reflect: below;
+    border-radius: 100%;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    will-change: transform;
+}
+
+article article {
+    position: absolute;
+    left: 100%;
+    top: -100%/sqrt(2);
+    padding-bottom: 100%/sqrt(2)/2;
+    width: 100%/sqrt(2);
+    -webkit-box-reflect: below;
+    -webkit-transform-origin: 0% 100%;
+    transform-origin: 0% 100%;
+}
+article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -104deg);
+    transform: rotate3d(0, 0, 1, -104deg);
+}
+article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -94deg);
+    transform: rotate3d(0, 0, 1, -94deg);
+}
+article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -84deg);
+    transform: rotate3d(0, 0, 1, -84deg);
+}
+article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -74deg);
+    transform: rotate3d(0, 0, 1, -74deg);
+}
+article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -64deg);
+    transform: rotate3d(0, 0, 1, -64deg);
+}
+article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -54deg);
+    transform: rotate3d(0, 0, 1, -54deg);
+}
+article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -44deg);
+    transform: rotate3d(0, 0, 1, -44deg);
+}
+article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -34deg);
+    transform: rotate3d(0, 0, 1, -34deg);
+}
+article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -24deg);
+    transform: rotate3d(0, 0, 1, -24deg);
+}
+article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -14deg);
+    transform: rotate3d(0, 0, 1, -14deg);
+}
+article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, -4deg);
+    transform: rotate3d(0, 0, 1, -4deg);
+}
+article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 6deg);
+    transform: rotate3d(0, 0, 1, 6deg);
+}
+article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 16deg);
+    transform: rotate3d(0, 0, 1, 16deg);
+}
+article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 26deg);
+    transform: rotate3d(0, 0, 1, 26deg);
+}
+article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 36deg);
+    transform: rotate3d(0, 0, 1, 36deg);
+}
+article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 46deg);
+    transform: rotate3d(0, 0, 1, 46deg);
+}
+article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 56deg);
+    transform: rotate3d(0, 0, 1, 56deg);
+}
+article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 66deg);
+    transform: rotate3d(0, 0, 1, 66deg);
+}
+article article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 76deg);
+    transform: rotate3d(0, 0, 1, 76deg);
+}
+article article article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 86deg);
+    transform: rotate3d(0, 0, 1, 86deg);
+}
+article article article article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 96deg);
+    transform: rotate3d(0, 0, 1, 96deg);
+}
+article article article article article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 106deg);
+    transform: rotate3d(0, 0, 1, 106deg);
+}
+article article article article article article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 116deg);
+    transform: rotate3d(0, 0, 1, 116deg);
+}
+article article article article article article article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 126deg);
+    transform: rotate3d(0, 0, 1, 126deg);
+}
+article article article article article article article article article article article article article article article article article article article article article article article article article article article {
+    -webkit-transform: rotate3d(0, 0, 1, 136deg);
+    transform: rotate3d(0, 0, 1, 136deg);
+}
+
+section {
+    position: absolute;
+    width: 150px;
+    padding-bottom: 75px;
+    top: 400px;
+    left: 300px;
+    -webkit-box-reflect: right;
+    -webkit-perspective: 700;
+    perspective: 700;
+}
+
+body {
+    background: #000;
+    color: white;
+    font-family: Helvetica, Arial, sans-serif;
+}
+
+.button,
+button {
+    display: inline-block;
+    vertical-align: top;
+    box-sizing: border-box;
+    border-radius: 3px;
+    padding: 1em 2em;
+    margin: 0.2em;
+    font-size: 1em;
+    border: 2px solid #6ceb90;
+    color: #6ceb90;
+    background: black;
+    box-shadow: none;
+    cursor: pointer;
+    text-decoration: none;
+}
+.button:hover,
+button:hover {
+    background: #6ceb90;
+    color: black;
+}
+.button.active,
+button.active {
+    background: #6ceb90;
+    color: black;
+}
+.button.active:hover,
+button.active:hover {
+    background: black;
+    color: #6ceb90;
+}
+.button:focus,
+button:focus {
+    outline: 0;
+}
+
