--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -2,13 +2,14 @@
   background: whitesmoke;
 }
 
-@media only screen and (max-width: 767px)
+@media only screen and (max-width: 767px) {
 .ui.container {
     /* margin-left: 1em!important; */
     /* margin-right: 1em!important; */
     margin-left: 0!important;
     margin-right: 0!important;
   }
+}
 
 .App-logo:hover {
   cursor: pointer;
