--- a/src/Home/Home.scss
+++ b/src/Home/Home.scss
@@ -1,3 +1,5 @@
+@import '../semantic-overides.scss';
+
 .Home-social-links {
 	display: flex;
 	justify-content: space-evenly;
@@ -19,4 +21,9 @@
 
 .Home-widget-container {
 	margin-bottom: 2rem;
+}
+
+// OVERRIDES
+.ui.inverted.header {
+		@include bc-text();
 }
