Home widget headers

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1,5 +1,7 @@
+@import '../semantic-overides.scss';
+
 .App, body {
-  background: whitesmoke;
+  background: $bg-color-1;
 }
 
 @media only screen and (max-width: 767px) {
