--- a/src/semantic-overides.scss
+++ b/src/semantic-overides.scss
@@ -1,7 +1,10 @@
 $font-1: 'Open Sans', sans-serif;
 $text-color-1: #f3f3f3;
+$bg-color-1: #191925;
+$bc-purple: #6255ff;
 
-@mixin bc-text() {
+@mixin bc-text($font-weight: normal) {
   font-family: $font-1;
   color: $text-color-1;
+  font-weight: $font-weight;
 }
