edited up more TrackItem stuff

--- a/src/TrackItem/TrackItem.scss
+++ b/src/TrackItem/TrackItem.scss
@@ -1,3 +1,39 @@
+@import '../semantic-overides.scss';
+
 .ui.tiny.statistic.TrackList-selection-count:hover {
     cursor: default;
+}
+
+.TrackItem-track-name {
+  @include bc-text(600);
+  font-size: 16px;
+  &:hover {
+    @include bc-text(600);
+  }
+}
+
+.TrackList-artist-info {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+  .TrackList-artist-name {
+    @include bc-text();
+    color: $bc-gray;
+    font-size: 12px;
+  }
+
+  .TrackList-artist-image {
+  	width: 100%;
+  	height: auto;
+  	border-radius: 100px;
+  }
+
+  .TrackList-artist-image-container {
+  	width: 30px;
+  	margin-left: 5px;
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
