refactored play button to serve both in global and track dependent situations, but dirty af

--- a/src/TrackItem/TrackItem.scss
+++ b/src/TrackItem/TrackItem.scss
@@ -15,7 +15,6 @@
 .TrackList-artist-info {
 	display: flex;
 	align-items: center;
-	justify-content: center;
 
   .TrackList-artist-name {
     @include bc-text();
@@ -36,4 +35,9 @@
       cursor: pointer;
     }
   }
+}
+
+// RAW OVERRIDE
+.ui.items > .item .meta {
+  margin: 0px;
 }
