--- a/src/ArtworkPlayButton/artwork_play_button.scss
+++ b/src/ArtworkPlayButton/artwork_play_button.scss
@@ -1,3 +1,9 @@
 .ArtworkPlayButton {
   position: relative;
+  &:hover {
+    // border: 5px solid red;
+    .PlayButton-overlay {
+      visibility: visible;
+    }
+  }
 }
