--- a/src/BCLogo/bc_logo.scss
+++ b/src/BCLogo/bc_logo.scss
@@ -1,6 +1,16 @@
-.BCLogo-container {
-  position: absolute;
-  left:50%;
-  top:50%;
-  transform: translate(-48%,-50%);
+.BCLogo {
+  display: flex;
+
+  .BCLogo-svg {
+    width: 72px;
+  }
+  .BCLogo-text {
+    margin-left: 22px;
+    margin-top: 5px;
+    font-size: 10px;
+    font-weight: bold;
+    letter-spacing: 2.1px;
+    width: 93px;
+    height: 14px;
+  }
 }
