--- a/src/semantic-overides.scss
+++ b/src/semantic-overides.scss
@@ -3,6 +3,8 @@ $text-color-1: #f3f3f3;
 $bg-color-1: #191925;
 $bc-purple: #6255ff;
 $bc-gray: #626970;
+$bc-gray-2: #262632;
+$bc-black: #22222e;;
 
 @mixin bc-text($font-weight: normal) {
   font-family: $font-1;
