--- a/src/BCLogo/bc_logo.scss
+++ b/src/BCLogo/bc_logo.scss
@@ -1,16 +1,18 @@
 .BCLogo {
   display: flex;
-
+  flex-direction: column;
+  align-items: center;
+  
   .BCLogo-svg {
     width: 72px;
   }
   .BCLogo-text {
-    margin-left: 22px;
-    margin-top: 5px;
+    // margin-left: 22px;
+    // margin-top: 5px;
     font-size: 10px;
     font-weight: bold;
     letter-spacing: 2.1px;
-    width: 93px;
-    height: 14px;
+    // width: 93px;
+    // height: 14px;
   }
 }
