custom arrow icon on fleek

--- a/src/semantic-overides.scss
+++ b/src/semantic-overides.scss
@@ -5,6 +5,7 @@ $bc-purple: #6255ff;
 $bc-gray: #626970;
 $bc-gray-2: #262632;
 $bc-black: #22222e;;
+$bc-pink: #e54ea3;
 
 @mixin bc-text($font-weight: normal) {
   font-family: $font-1;
