--- a/src/SplashBanner/splash_banner.scss
+++ b/src/SplashBanner/splash_banner.scss
@@ -58,11 +58,18 @@
           padding-left: 20px;
         }
 
-        .SplashBanner-arrow {
-          width: 28px;
-          height: 100%;
+        .SplashBanner-arrow-container {
           position: absolute;
-          right: 0;
+          display: flex;
+          right: 6px;
+          top: 3px;
+          padding: 5px;
+          width: 20px;
+          height: 20px;
+          background: $bc-pink;
+          border-radius: 50px;
+          justify-content: center;
+
           &:hover {
             cursor: pointer;
           }
