--- a/src/BCLogo/bc_logo.scss
+++ b/src/BCLogo/bc_logo.scss
@@ -1,8 +1,12 @@
 .BCLogo {
+  &:hover{
+    cursor: pointer;
+  }
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  
+
   .BCLogo-svg {
     width: 72px;
   }
