--- a/src/TopNav/top_nav.scss
+++ b/src/TopNav/top_nav.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 80px;
-  position: fixed;
+  position: absolute;
   z-index: 1;
   width: 100%;
 }
