--- a/src/SplashBanner/splash_banner.scss
+++ b/src/SplashBanner/splash_banner.scss
@@ -1,4 +1,4 @@
-@import '../semantic-overides.scss';
+@import "../semantic-overides.scss";
 
 .SplashBanner {
   position: relative;
@@ -66,7 +66,7 @@
           padding: 5px;
           width: 20px;
           height: 20px;
-          background: $bc-pink;
+          background: rgba(255, 255, 255, 0.1);
           border-radius: 50px;
           justify-content: center;
 
