--- a/src/BCWeeklyItem/BCWeeklyItem.scss
+++ b/src/BCWeeklyItem/BCWeeklyItem.scss
@@ -1,4 +1,4 @@
-@import '../semantic-overides.scss';
+@import "../semantic-overides.scss";
 
 $item-width: 800px;
 
@@ -15,7 +15,6 @@ $item-width: 800px;
     .BCWeeklyItem-cover-image {
       width: 100%;
       height: auto;
-      opacity: 0.1;
     }
 
     .BCWeeklyItem-cover-text {
